# trace-synthesizer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.txt  poetry.toml  pyproject.toml  script.sh
analysis/: README.md  baseline_ctuning.ipynb
benchmarks/: ctuning_curated.json
benchmarks/cbench_support/: compile_hints.json  xopenme.h  xopenme_stub.c
benchmarks/local/: benchmark_branches.cpp  benchmark_complex.cpp  benchmark_loops.cpp  multiseed_rollout.json
cmake/: DownloadDynamoRIO.cmake  SetupLLVM.cmake
docs/: Documentation_EN.md  Documentation_RU.md  README.md
docs/en/: BENCHMARK_COMPLEX_MANUAL.md  CTUNING_CORE_EXPERIMENT.md  CTUNING_PROGRAMS.md  Documentation.md  EXPERIMENTS.md  INDEX.md  METRICS_AND_TRACE_ML_INFRASTRUCTURE.md  OVERVIEW.md  README.md  REPRODUCTION.md
docs/ru/: BENCHMARK_COMPLEX_MANUAL.md  CTUNING_CORE_EXPERIMENT.md  CTUNING_PROGRAMS.md  Documentation.md  EXPERIMENTS.md  EXPERIMENT_REPORT_BASELINE_LSTM.md  INDEX.md  METRICS_AND_TRACE_ML_INFRASTRUCTURE.md  README.md  REPRODUCTION.md
examples/: complex.cpp  easy.cpp  math_ops.cpp  simple.cpp  sorting.cpp  trace_main.txt  trace_main_fibonacci.txt
examples/benchmark_complex/: README.md  benchmark_complex.cpp  main.cfg.json
lol/: mir_analyzer.py  mir_pipeline.sh
lol2/: mir_pipeline.sh
mir_analyze_test_pipeline/: main.cpp  mir_pipeline.sh
mir_analyze_test_pipeline/mir_lib/: engine.py
notebooks/: lstm_training_and_metrics.ipynb
scripts/: augment_cfg_with_ir2vec.py  bootstrap_ctuning_programs.sh  build_corpus_dataset.py  build_cpp_dataset_artifacts.sh  build_multi_program_intra_dataset.py  check_baseline.sh  compare_traces.sh  compute_loop_profile.py  ctuning_crc32_paired_traces_and_viz.sh  ctuning_full_pipeline_c.sh  exp_common.py  full_pipeline.sh  generate_cfg.sh  generate_current_report_assets.py  generate_experiment_report_assets.py  hyperparam_search_lstm.py  init_ctuning_submodule.sh  package_experiment_artifacts.sh  print_metrics.py  run_benchmark_complex.sh  run_cross_mutation_exp.py  run_cross_opt_exp.py  run_cross_smart_exp.py  run_cross_sorting_exp.py  run_dataset_cbench.sh  run_diamond_exp.py  run_lstm_eval.sh  run_lstm_stat_experiments.py  run_multiseed.py  run_plugins_demo.sh  run_production_validation_experiment.sh  run_random_baseline.sh  run_tensorboard.sh  run_tracer.sh  run_train_lstm.sh  run_trigger_exp.py  run_valid_two_factor_exp.py  summarize_production_validation.py  train_feature_window_lstm.py  train_hrl_ppo.py  (+2 more)
src/: CMakeLists.txt
src/BBTracer/: BBTracer.cpp  CMakeLists.txt
src/CFGDumper/: CFGDumper.cpp  CMakeLists.txt
src/InstrTracer/: CMakeLists.txt  InstrTracer.cpp
src/tracer/: CFGJsonDumper.cpp  CMakeLists.txt  tracer.cpp
tests/: test_action_mask_supervision.py  test_block_features.py  test_cfg_walk_max_steps_zero.py  test_cfg_walk_trivial.py  test_ctuning_manifest.py  test_feature_window_lstm.py  test_interproc_env.py  test_intra_canonical.py  test_intra_trace.py  test_metrics_e2e.py  test_metrics_hot_path.py  test_metrics_kl.py  test_metrics_loaders.py  test_multi_program_intra_dataset.py  test_normalize_weights.py  test_production_validation_scripts.py  test_program_trace_session.py  test_reference_rewards.py  test_runner_paths_jsonl.py
tools_py/: match_trace.py  trace_pipeline.py  validate_trace.py  visualize_cfg.py  viz.py  walker.py
trace_pipeline/: main.py
trace_pipeline/mir_lib/: core.py  parser.py  visualizer.py
trace_synthesizer/: __init__.py  __main__.py  program_trace.py
trace_synthesizer/agents/: __init__.py  cfg_supervision.py  checkpoint.py  protocol.py  (+6 more)
trace_toolkit/: common.py  mir_parser.py  pipeline.sh  stepper.py  trace_mapper.py  visualizer.py
(+73 files in other folders)
