[project]
name = "trace-synthesizer"
version = "0.1.0"
description = "A research framework for collecting, analyzing, and eventually synthesizing execution traces using machine learning."
authors = [
    {name = "Michael Litvinov", email = "litvinovmitch11@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "graphviz (>=0.21,<0.22)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
